Fixed so banner stretches full width of screen.

--- a/style.css
+++ b/style.css
@@ -2,16 +2,31 @@ html {
     box-sizing: border-box;
 }
 
-*, *::before, *::after{
-    box-sizing: inherit;
+body {
+    min-width:fit-content;
+    margin: 0;
 }
 
-.title {
+*, *::before, *::after{
+     box-sizing: inherit;
+}
+
+
+.banner {
+    box-sizing: block;
+   
+}
+
+
+.banner .content {
+    display: block;
     font-size: xxx-large;
-    padding: 1em 1em 1em 17em;
+    padding: 1em 1em 1em 1em;
     color: #EEEEEE;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #548CA8;
+    text-align: center; 
+
 }
 
 .recipes {
@@ -19,11 +34,13 @@ html {
     font-size: large;
     padding: 1em;
     list-style: none;
-    border: 0px solid purple;
-    margin-left: 10em;
+    border: 0px solid rgb(195, 0, 255);
+    margin: 0;
+
 }
 
-.recipes .content {
+.recipes li {
+    diplay: flex;
     padding: 1em 10em 1em 10em;
     border: 2px solid blue;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -34,7 +51,21 @@ html {
     color: #fff;
 }
 
-.pic-one {
+.flex-container {
+    display: flex;
+    border: 0px solid red;
+    padding: 1em 1em 1em 3em;
+}
+
+.flex-container img {
+    height: auto;
+    width: 400px;
+    border: 1px solid purple;
+    
+
+}
+
+/* .pic-one {
     height: 300px;
     width: 300px;
     border: 1px solid purple;
@@ -53,4 +84,4 @@ html {
     height: auto;
     width: 300px;
     border: 1px solid purple;
-}
+} */
